CAY-2813 Regression: Constants.CI_PROPERTY flag is no longer working for MySQL
CAY-2815 Incorrect translation of aliased expression
CAY-2838 Vertical Inheritance: Problem setting db attribute to null via flattened path
CAY-2840 Vertical Inheritance: Missing subclass attributes with joint prefetch
CAY-2841 Multi column ColumnSelect with SHARED_CACHE fails after 1st select

----------------------------------
Release: 4.2
Date: May 16, 2023
----------------------------------
Changes/New Features:

CAY-2802 Upgrade Gradle to 7.6.1
CAY-2805 Stop calling exp parser internally

Bug Fixes:

CAY-2552 ColumnQuery with flattened attributes bug
CAY-2783 DbEntity to ObjEntity synchronization should check mandatory flag for primitive java types
CAY-2789 MalformedJsonException thrown when reading manually edited JSON data in Postgres
CAY-2790 EOModel import: NPE importing EOFetchSpecification
CAY-2792 Fix Insertion Order For Reflexive DataObjects
CAY-2794 Fix Incorrect JavaType for Vertical-Inheritance Attributes
CAY-2796 Cayenne custom json formatter produces invalid json
CAY-2800 Modeler saves map.xml files with schema ordering error
CAY-2801 Incorrect equals() implementation in IdGenerationMarker could cause data missing in the commit

----------------------------------
Release: 4.2.RC2
Date: December 1, 2022
----------------------------------
Changes/New Features:

CAY-2741 Cleanup TransactionDescriptor and deprecate DefaultTransactionDescriptor
CAY-2743 Deprecate ROP
CAY-2749 Deprecate object clustering transports
CAY-2750 Deprecate web module
CAY-2775 Change Objectstyle maven repository URL
CAY-2776 Upgrade Gradle to 7.6

Bug Fixes:

CAY-2732 Exception when creating ObjEntity from a DbEntity
CAY-2755 Modeler: Entities are not sorted by name in the class generation view
CAY-2762 Modeler: Difference in toolbars colors on OSX
CAY-2763 Split expressions do not work with flattened relationships
CAY-2764 Split expressions do not work with DB relationships