@@ -19,14 +19,10 @@
 
 package org.apache.cayenne.access.translator.select;
 
-import org.apache.cayenne.access.sqlbuilder.NodeBuilder;
 import org.apache.cayenne.access.sqlbuilder.sqltree.Node;
 import org.apache.cayenne.exp.Expression;
 import org.apache.cayenne.exp.parser.ASTDbPath;
 import org.apache.cayenne.exp.parser.ASTPath;
-
-import static org.apache.cayenne.access.sqlbuilder.SQLBuilder.exp;
-import static org.apache.cayenne.access.sqlbuilder.SQLBuilder.node;
 
 /**
  * @since 4.2
@@ -36,32 +32,34 @@ class TableTreeQualifierStage implements TranslationStage {
     @Override
     public void perform(TranslatorContext context) {
         context.getTableTree().visit(node -> {
-            Expression dbQualifier = node.getEntity().getQualifier();
-            if (dbQualifier != null) {
-                String pathToRoot = node.getAttributePath().getPath();
-                dbQualifier = dbQualifier.transform(input -> {
-                    if (input instanceof ASTPath) {
-                        String path = ((ASTPath) input).getPath();
-                        if(!pathToRoot.isEmpty()) {
-                            path = pathToRoot + '.' + path;
-                        }
-                        return new ASTDbPath(path);
-                    }
-                    return input;
-                });
-                Node rootQualifier = context.getQualifierNode();
-                Node translatedQualifier = context.getQualifierTranslator().translate(dbQualifier);
-                if (rootQualifier != null) {
-                    NodeBuilder expressionNodeBuilder = exp(node(rootQualifier)).and(node(translatedQualifier));
-                    context.setQualifierNode(expressionNodeBuilder.build());
-                } else {
-                    context.setQualifierNode(translatedQualifier);
-                }
-            }
+            appendQualifier(context, node, node.getEntity().getQualifier());
+            appendQualifier(context, node, node.getAdditionalQualifier());
         });
 
         if(context.getQualifierNode() != null) {
             context.getSelectBuilder().where(context.getQualifierNode());
         }
+    }
+
+    private static void appendQualifier(TranslatorContext context, TableTreeNode node, Expression dbQualifier) {
+        if (dbQualifier == null) {
+            return;
+        }
+
+        String pathToRoot = node.getAttributePath().getPath();
+        dbQualifier = dbQualifier.transform(input -> {
+            if (input instanceof ASTPath) {
+                String path = ((ASTPath) input).getPath();
+                // here we are not only marking path as prefetch, but changing ObjPath to DB
+                // (without conversion, as it's a convenience option to allow path without "db:" in the Modeler)
+                if(!pathToRoot.isEmpty()) {
+                    path = pathToRoot + '.' + path;
+                }
+                return new ASTDbPath(path);
+            }
+            return input;
+        });
+        Node translatedQualifier = context.getQualifierTranslator().translate(dbQualifier);
+        context.appendQualifierNode(translatedQualifier);
     }
 }
